<resources>
    <string name="app_name">HomeworkThree</string>
    <string name="homework_three">Homework Three</string>
    <string name="task_one">Task One</string>
    <string name="task_two">Task Two</string>
    <string name="sofia">Sofia</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="paris_info">Paris is the capital and the most populous city of France. It has an area of 105 km² and a population in 2013 of 2,229,621 within the city limits. Paris is both a commune and department, and forms the centre and headquarters of the Île-de-France, or Paris Region, which has an area of 12,012 square kilometers (4,638 square miles) and a population in 2014 of 12,005,077, comprising 18.2 percent of the population of France.</string>
    <string name="sofia_information">Sofia is the capital and largest city of Bulgaria. The city has a population of 1.26 million, while over 1.5 million people live in its functional urban area. The city is located at the foot of Vitosha Mountain in the western part of the country, within less than 50 kilometres (31 mi) drive from the Serbian border.</string>
    <string name="london_information">London Listeni is the capital and most populous city of England and the United Kingdom.Standing on the River Thames in the south east of the island of Great Britain, London has been a major settlement for two millennia. It was founded by the Romans, who named it Londinium. Londons ancient core, the City of London, largely retains its 1.12-square-mile (2.9 km2) medieval boundaries.</string>
</resources>
